# boxunbox

./: .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml  example.bub.toml  example.unboxrc.ron  tag_release.sh  update_pkgbuilds.sh
.forgejo/workflows/: cargo.yml
.github/workflows/: cargo.yml  changelog.yaml
boxunbox/: Cargo.toml
boxunbox-mangen/: Cargo.toml
boxunbox-mangen/src/: main.rs
boxunbox-shell-complete/: Cargo.toml
boxunbox-shell-complete/src/: main.rs
boxunbox/demo/src/: .bub.toml
boxunbox/demo/src/folder1/: nested1.txt
boxunbox/demo/src/folder2/: .bub.toml  .unboxrc.ron  nested2.txt
boxunbox/src/: cli.rs  error.rs  lib.rs  main.rs  package.rs  plan.rs  test_utils.rs  utils.rs
boxunbox/src/package/: error.rs
custom_shellexpand/: Cargo.toml
custom_shellexpand/src/: lib.rs
demo/src/: .unboxrc  .unboxrc.macos.ron  .unboxrc.ron
demo/src/folder2/: .unboxrc.ron  nested2 again.txt
src/: cli.rs  constants.rs  custom_shellexpand.rs  error.rs  lib.rs  main.rs  package.rs  plan.rs  rc.rs  test_utils.rs  utils.rs
src/package/: error.rs  errors.rs  plan.rs
src/rc/: errors.rs  parser.rs
tests/: test_utils.rs
