[package]
name = "boxunbox"
version = "0.1.26"
edition = "2024"
license-file = "LICENSE"
readme = "README.md"
description = "A simple symlinker inspired by GNU stow"
repository = "https://github.com/dablenparty/boxunbox"
categories = ["command-line-utilities", "filesystem"]
exclude = ["aur/*", "demo/*", "*.sh"]

[[bin]]
name = "unbox"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.96"
clap = { version = "4.5.31", features = ["derive", "cargo", "unicode"] }
colored = "3.0.0"
const_format = { version = "0.2.34", features = ["fmt"] }
directories-next = "2.0.0"
expandenv = "0.1.0"
path-clean = "1.0.1"
pathdiff = "0.2.3"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_regex = "1.1.0"
thiserror = "2.0.12"
toml = "0.8.22"
walkdir = "2.5.0"

[profile.release]
opt-level = 3
strip = "debuginfo"
lto = true
codegen-units = 1
panic = "abort"
