[workspace]
resolver = "3"
members = ["boxunbox", "boxunbox-mangen", "boxunbox-shell-complete"]
exclude = ["aur/*", "demo/*", "*.sh"]

[workspace.dependencies]
anyhow = "1.0.98"
boxunbox = { path = "boxunbox" }
clap = { version = "4.5.40", features = ["derive", "cargo", "unicode"] }

[profile.dev]
opt-level = 0
debug = true
panic = "abort"

[profile.test]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
strip = "debuginfo"
lto = true
codegen-units = 1
panic = "abort"
