[package]
name = "boxunbox"
version = "0.2.3"
edition = "2024"
license-file = "../LICENSE"
readme = "../README.md"
description = "A simple symlinker inspired by GNU stow"
repository = "https://github.com/dablenparty/boxunbox"
categories = ["command-line-utilities", "filesystem"]
default-run = "unbox"

[lib]
name = "boxunbox"

[[bin]]
name = "unbox"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
colored = "3.0.0"
const_format = { version = "0.2.34", features = ["fmt"] }
directories-next = "2.0.0"
dunce = "1.0.5"
expandenv = "0.1.3"
path-clean = "1.0.1"
pathdiff = "0.2.3"
regex = "1.11.1"
ron = "0.10.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_regex = "1.1.0"
thiserror = "2.0.12"
toml = { version = "0.9.3", features = ["preserve_order"] }
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.20.0"
